# rs-zips2jsonl

./: Cargo.toml  README.md  rs-zips2jsonl.wasm  run.sh
sample.d/: z1j0.json  z1j1.json
src/: lib.rs  main.rs
