[package]
name = "rs-zips2jsonl"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"
expect_used = "forbid"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = "s"
codegen-units = 16

[dependencies.zip]
version = "5"
default-features = false
features = [
	"deflate",
]
